fix overlap issue on floorplan for laptop

--- a/style.css
+++ b/style.css
@@ -586,7 +586,7 @@ a {
 
 .floorplans-top h1, .floorplans-top a {
   position: relative;
-  top: -100px;
+  top: -35px;
 }
 
 .top, .contact-top, .gallery-top, .history-top, .neighborhood-top, .home-top, .amenities-top, .floorplans-top, .apply-top, .portal-top, .faq-top {
