--- a/styles/top/_top.scss
+++ b/styles/top/_top.scss
@@ -30,7 +30,7 @@
 .floorplans-top{
 	h1,a{
 		position:relative;
-		top:-100px;
+		top:-35px;
 	}
 }
 
